Replace all WaterlooType references with GooseType

--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WaterlooType - Competitive Typing for UWaterloo</title>
-    <meta name="description" content="Minimalist typing test platform for University of Waterloo students. Compete on leaderboards, earn badges, track your WPM and accuracy." />
-    <meta name="author" content="WaterlooType" />
+    <title>GooseType - Competitive Typing for University Students</title>
+    <meta name="description" content="Competitive typing platform for university students worldwide. Compete on leaderboards, track your WPM and accuracy, and improve your typing skills." />
+    <meta name="author" content="GooseType" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Roboto+Mono:wght@400;500;600&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="WaterlooType - Type Faster. Beat Waterloo." />
-    <meta property="og:description" content="Real-time typing races, competitive leaderboards, and exclusive badges for UWaterloo students only" />
+    <meta property="og:title" content="GooseType - Type Faster. Beat Everyone." />
+    <meta property="og:description" content="Competitive typing platform for university students worldwide. Real-time typing races, competitive leaderboards, and detailed performance tracking." />
     <meta property="og:type" content="website" />
     
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@WaterlooType" />
+    <meta name="twitter:site" content="@GooseType" />
     
   </head>
 
